<resources>
    <string name="app_name">NePyatnashki</string>
    <string name="watch_your_stats_string">Watch your stats</string>
    <string name="statistics_string">Statistics</string>
    <string name="our_main_string">СОБЕРИ ЕБАЛО МИШЕ</string>
    <string name="settings_string">Settings</string>
    <string name="control_mode_string">Control mode</string>
    <string name="control_mode_clicks_string">Control by clicks</string>
    <string name="control_mode_swipes_string">Control by swipes</string>
    <string name="ok_string">Ok</string>
    <string name="cancel_string">Cancel</string>
    <string name="sign_in_string">Sign in</string>
    <string name="sign_in_page_header_string">Sign In Page</string>
    <string name="register_string">Register</string>
    <string name="sign_in_register_greetings_string">Enter your credentials to sign in or register into application</string>
    <string name="log_out_string">Log out</string>
    <string name="gallery_page_header_string">Gallery</string>
</resources>
