<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/sign_in_page_header_string"
        android:gravity="center"
        android:background="@color/themeColor"
        android:padding="24dp"
        android:textColor="@android:color/white"
    />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_register_greetings_string"
        android:padding="32dp"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@color/grey"
    />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themeColor"
    />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/themeColor"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
    >
        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CustomRegisterButtonStyle"
            android:text="@string/register_string"
        />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CustomSignInButtonStyle"
            android:text="@string/sign_in_string"
        />
    </LinearLayout>
</LinearLayout>